test/files/neg/t1011.check
t1011.scala:8: error: not found: value entity
       <dl><code>{Text(entity)}</code>
                       ^
t1011.scala:9: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:10: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:11: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:12: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:13: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:14: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:15: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:16: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:17: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:18: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:19: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:20: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:21: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:22: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:23: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:24: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:25: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:26: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:27: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:28: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:29: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:30: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:31: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:32: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:33: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:34: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:35: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:36: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:37: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:38: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:39: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:40: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:41: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:42: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:43: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:44: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:45: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:46: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:47: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:48: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:49: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:50: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:51: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:52: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:53: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:54: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:55: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:56: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:57: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:58: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:59: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:60: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:61: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:62: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:63: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:64: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:65: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:66: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:67: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:68: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:69: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:70: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:71: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:72: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:73: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:74: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:75: error: not found: value entity
           <code>{Text(entity)}</code>
                       ^
t1011.scala:76: error: not found: value entity
           <code>{Text(entity)}</code></dl>
                       ^
69 errors found
